--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "merge-class-names": "^1.1.1",
     "prop-types": "^15.6.0",
     "react-calendar": "^3.0.0",
-    "react-date-picker": "^8.0.0",
+    "react-date-picker": "cragia/react-date-picker#master",
     "react-fit": "^1.0.3"
   },
   "devDependencies": {
